--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
   place-items: center;
   min-height: 100vh;
   width: 100vw;
-  background-image: url('/images/bg-pattern-top.svg'), url('/images/bg-pattern-top.svg');
+  background-image: url('../images/bg-pattern-top.svg'), url('../images/bg-pattern-top.svg');
   background-repeat: no-repeat;
   overflow: hidden;
   background-position: 140% 210%, -40% -125%;
@@ -47,7 +47,7 @@ body {
 }
 
 .card__header {
-  background-image: url('/images/bg-pattern-card.svg');
+  background-image: url('../images/bg-pattern-card.svg');
   height: 140px;
   background-repeat: no-repeat;
   position: relative;
